tests/type-errors/expr_record_update_record_invalid_type.arl
archetype expr_record_update_invalid_type

record my_record {
  n : nat;
  s : string;
}

variable res : my_record = { n = 0; s = ""}

entry exec() {
  res := { res with n = "0" }
}
